 - README: Update command for one-time enablement.
 - backends/packaging-apt-dpkg.py: Fix interleaving usage of install_packages()
   with other operations such as get_version(), by resetting the apt status
   after building and using the sandbox.
 - report.py test suite: Remove requirement that $USER is set, which makes it
   easier to run this from package build environments.

Improvements:
 - Ignore a crash if gnome-session is running and says that the session is
   being shut down. These often die because X.org or other services are going
   away, are usually harmless, and just cause a lot of clutter in bug trackers.
   (LP: #460932)
 - test/crash: Rewrite using Python's unittest, to be in line with other tests,
   and be easier to maintain and extend.

1.25 (2011-11-02):
------------------
Improvements:
 - Add new response "Examine locally" to presenting the report details, which
   runs apport-retrace in the chosen mode in a terminal. This should be made
   available for crash reports if apport-retrace and a Terminal application are
   installed; add an abstrace UI method for this. (LP: #75901)
 - apport-gtk: Add "Examine locally..." button, and implement
   ui_run_terminal().
 - apport-cli: Add "Examine locally..." responses, and implement
   ui_run_terminal().
 - apport-cli: Greatly speed up displaying large reports. This also changes the
   format to avoid indenting each line with a space, and visually set apart the
   keys in a better way.
 - apport_python_hook.py: Move tests out of this file into test/python, to
   avoid having to parse the unit tests at each Python startup.
 - test/python: Also make tests work if Python hook is not installed in
   system's sitecustomize.py.
 - packaging.py: Add get_modified_conffiles() API, and implement it in
   packaging-apt-dpkg.py.
 - hookutils.py: Add attach_conffiles().
 - hookutils.py: Add attach_upstart_overrides().

Bug fixes: 
 - launchpad.py: Remove "Ubuntu" in bug response, replace with "this software".